
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vf-bfcl"
version = "0.1.0"
description = "BFCL environment for verifiers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WhyPhyLabs"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# NOTE: This should be kept in sync with the root pyproject.toml bfcl extras
# Root pyproject.toml is the source of truth for BFCL dependencies
dependencies = [
    "verifiers[bfcl]",
]

[project.urls]
Homepage = "https://github.com/WhyPhyLabs/verifiers"
Repository = "https://github.com/WhyPhyLabs/verifiers"
Issues = "https://github.com/WhyPhyLabs/verifiers/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = ["vf_bfcl"]

[tool.setuptools.package-dir]
vf_bfcl = "."
