[project]
name = "vf-multi-swe-bench"
description = "Multi-SWE-Bench adapter environment for verifiers"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_multi_swe_bench.py"]

